--- a/index.html
+++ b/index.html
@@ -106,6 +106,11 @@
         <div class="flag">🇪🇺</div>
         <h2>Europe Map New</h2>
       </div>
+      <div class="card-container">
+        <div class="card" onclick="location.href='index-south-america.html'">
+          <div class="flag">🇪🇺</div>
+          <h2>South America</h2>
+        </div>
   <footer>© 2025 World Map Quiz Project</footer>
 
 </body>
